--- a/salud.html
+++ b/salud.html
@@ -1,2 +1,49 @@
 <!DOCTYPE html>
-<h1>bienvenido a la vacunacion lecciones los datos deonde se colocaran las fechas deseadas</h1>
+<html>
+<head>
+    <title>Campaña de Vacunación</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"&amp;gt;>
+    <link rel="stylesheeet" type="text/css" href="salud.css">
+</head>
+<body>     
+<h1>Bienvenido a la vacunacion lecciones los datos deonde se colocaran las fechas deseadas</h1>
+    <table class="default">
+        <tr>
+          <th scope="row">horas</th>
+          <td>9:00 am   </td>
+          <td>7:00 pm   </td>
+          <th>Los dias </th>
+        </tr>
+        <tr>
+          <th>Vacunas</th>
+          <td>Pfizer </td>
+          <td>AstraZeneca</td>
+          <td>Sinovac</td>
+          <td>Moderna</td>
+          <td>Calcino</td>
+          <td>Otras</td>
+        </tr>
+        <tr>
+          <th>Dias </th>
+          <td>12</td>
+          <td>13</td>
+          <td>14</td>
+          <td>15</td>
+          <td>16</td>
+          <td>Nuevas fechas</td>
+        </tr>
+        <tr>
+          <th>Primera letrad </th>
+          <td>A - F</td>
+          <td>G - J</td>
+          <td>K - L </td>
+          <td>M - O</td>   
+          <td>P - T</td>
+          <td>V - Z</td>
+
+        </tr>
+      </table>
+    </body>
+</html>
+
